--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
         <div class = "container h-100 d-flex align-items-center ">
             <div class = "text-end carousel-item active">
                 <h1 class = "text-capitalize py-2 fw-bold text-black">Be Minimalism</h1>
-                <h2 class = "text-capitalize text-white">Get many aesthetic furnitures for your room</h2>
+                <h4 class = "text-capitalize text-white">Get many aesthetic furnitures for your room</h4>
                 
                 <a href = "#" class = "btn mt-3 text-capitalize">Discover </a>
             </div>
+        </div>
 
         </header>
 
